# gd-mcp-pro

./: CHANGELOG.md  README.md
.clinerules/: memory-bank.md
addons/godot_mcp/: plugin.cfg
addons/godot_mcp/commands/: node_commands.gd
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
server/: .gitignore  README.md  pyproject.toml
server/src/godot_mcp_pro/: __init__.py  __main__.py  bridge.py  server.py
server/src/godot_mcp_pro/tools/: __init__.py  analysis.py  android.py  animation.py  audio.py  batch.py  compact.py  editor.py  export.py  input_tools.py  navigation.py  node.py  particle.py  physics.py  profiling.py  project.py  resource.py  runtime.py  scene.py  scene_3d.py  script.py  shader.py  test.py  theme.py  tilemap.py
