[project]
name = "godot-mcp-pro"
version = "1.0.0"
description = "Python FastMCP server for AI-powered Godot game development"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "websockets>=12.0",
]

[project.scripts]
godot-mcp-pro = "godot_mcp_pro.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/godot_mcp_pro"]